--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
     <meta name="twitter:title" content="Hamza — Full-Stack Developer" />
     <meta name="twitter:description" content="I build fast, reliable web apps that turn ideas into profit." />
     <meta name="twitter:image" content="/favicon.svg" />
+    
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Hamza Arya",
+        "url": "https://hamzaarya.dev",
+        "image": "https://hamzaarya.dev/favicon.svg",
+        "jobTitle": "Full-Stack Developer",
+        "worksFor": { "@type": "Organization", "name": "Freelance" },
+        "sameAs": [
+          "https://github.com/hamza",
+          "https://linkedin.com/in/hamza"
+        ]
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Hamza — Full-Stack Developer",
+        "url": "https://hamzaarya.dev",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://hamzaarya.dev/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    ]
+    </script>
   </head>
   <body class="bg-gray-900 text-gray-100">
     <!-- Header / Navbar -->
@@ -771,7 +800,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/scripts/main.js"></script>
     <script>
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
