--- a/resume.html
+++ b/resume.html
@@ -120,7 +120,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/scripts/main.js"></script>
     <script>
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
