refactor: move pages into /pages and update links; tailwind glob

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,13 +23,13 @@
     <header data-sticky class="fixed inset-x-0 top-0 z-50 transition-colors">
       <nav class="container-pro flex h-16 items-center justify-between">
         <div class="flex items-center gap-6">
-          <a href="index.html" class="flex items-center gap-2 font-semibold">
+          <a href="../index.html" class="flex items-center gap-2 font-semibold">
             <span class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white">H</span>
             <span>Hamza</span>
           </a>
           <div class="hidden md:flex items-center gap-2 text-sm">
-            <a href="index.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Home</a>
-            <a href="index.html#about" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">About</a>
+            <a href="../index.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Home</a>
+            <a href="../index.html#about" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">About</a>
             <!-- Work dropdown (hover) -->
             <div class="relative group">
               <button type="button" class="inline-flex items-center gap-1 px-3 py-2 rounded-md hover:bg-white/5" aria-haspopup="true" aria-expanded="false">
@@ -37,14 +37,14 @@
                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="transition-transform duration-200 group-hover:rotate-180"><path d="M6 9l6 6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
               </button>
               <div class="absolute left-0 top-full z-50 mt-2 w-56 card p-2 invisible opacity-0 translate-y-1 transition-all duration-200 ease-out group-hover:visible group-hover:opacity-100 group-hover:translate-y-0" role="menu">
-                <a href="index.html#projects" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Projects</a>
-                <a href="index.html#testimonials" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Testimonials</a>
-                <a href="case-studies.html" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Case Studies</a>
-                <a href="blog.html" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Blog</a>
+                <a href="../index.html#projects" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Projects</a>
+                <a href="../index.html#testimonials" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Testimonials</a>
+                <a href="./case-studies.html" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Case Studies</a>
+                <a href="./blog.html" class="block rounded-md px-3 py-2 hover:bg-white/5" role="menuitem">Blog</a>
               </div>
             </div>
-            <a href="services.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Services</a>
-            <a href="contact.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Contact</a>
+            <a href="./services.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Services</a>
+            <a href="./contact.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Contact</a>
           </div>
         </div>
         <div class="hidden md:flex items-center gap-2">
@@ -52,34 +52,34 @@
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6 6h15l-1.5 9h-12z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M6 6l-1-2H2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="9" cy="20" r="1.5" fill="currentColor"/><circle cx="18" cy="20" r="1.5" fill="currentColor"/></svg>
             <span class="sr-only">Shop</span>
           </a>
-          <a href="contact.html" class="btn-minimal">Hire Me</a>
+          <a href="./contact.html" class="btn-minimal">Hire Me</a>
         </div>
         <button data-mobile-nav-toggle class="md:hidden btn-ghost" aria-controls="mobile-menu" aria-expanded="false">Menu</button>
       </nav>
       <!-- Mobile menu -->
       <div data-mobile-nav id="mobile-menu" data-open="false" class="hidden md:hidden border-t border-white/10 bg-gray-900/80 backdrop-blur">
         <div class="container-pro py-4 flex flex-col gap-3">
-          <a href="index.html" class="py-2">Home</a>
-          <a href="index.html#about" class="py-2">About</a>
+          <a href="../index.html" class="py-2">Home</a>
+          <a href="../index.html#about" class="py-2">About</a>
           <div data-submenu-container>
             <button class="w-full flex items-center justify-between py-2" data-submenu-toggle aria-expanded="false">
               <span>Work</span>
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6 9l6 6 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
             </button>
             <div class="ml-3 mt-1 hidden flex-col" data-submenu>
-              <a href="index.html#projects" class="py-1.5">Projects</a>
-              <a href="index.html#testimonials" class="py-1.5">Testimonials</a>
-              <a href="case-studies.html" class="py-1.5">Case Studies</a>
-              <a href="blog.html" class="py-1.5">Blog</a>
+              <a href="../index.html#projects" class="py-1.5">Projects</a>
+              <a href="../index.html#testimonials" class="py-1.5">Testimonials</a>
+              <a href="./case-studies.html" class="py-1.5">Case Studies</a>
+              <a href="./blog.html" class="py-1.5">Blog</a>
             </div>
           </div>
-          <a href="services.html" class="py-2">Services</a>
-          <a href="contact.html" class="py-2">Contact</a>
+          <a href="./services.html" class="py-2">Services</a>
+          <a href="./contact.html" class="py-2">Contact</a>
           <div class="flex gap-3 pt-2">
             <a href="#shop" aria-label="Shop" class="btn-ghost" title="Shop">
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M6 6h15l-1.5 9h-12z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M6 6l-1-2H2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="9" cy="20" r="1.5" fill="currentColor"/><circle cx="18" cy="20" r="1.5" fill="currentColor"/></svg>
             </a>
-            <a href="contact.html" class="btn-minimal">Hire Me</a>
+            <a href="./contact.html" class="btn-minimal">Hire Me</a>
           </div>
         </div>
       </div>
@@ -739,7 +739,7 @@
               </p>
             </div>
             <div class="mt-8">
-              <a href="index.html#contact" class="btn-primary">Let's Connect</a>
+              <a href="../index.html#contact" class="btn-primary">Let's Connect</a>
             </div>
           </div>
           <div data-reveal class="opacity-0 translate-y-6">
@@ -799,10 +799,10 @@
           </p>
           
           <div class="flex flex-wrap justify-center gap-6">
-            <a href="index.html#contact" class="btn-primary text-lg px-8 py-4 hover:scale-105 transition-transform duration-300 shadow-lg hover:shadow-xl">
+            <a href="../index.html#contact" class="btn-primary text-lg px-8 py-4 hover:scale-105 transition-transform duration-300 shadow-lg hover:shadow-xl">
               Start a Project
             </a>
-            <a href="index.html#projects" class="btn-secondary text-lg px-8 py-4 hover:scale-105 transition-transform duration-300">
+            <a href="../index.html#projects" class="btn-secondary text-lg px-8 py-4 hover:scale-105 transition-transform duration-300">
               View My Work
             </a>
           </div>
@@ -833,7 +833,7 @@
         <div class="flex items-center gap-4">
           <a class="hover:text-white" href="https://github.com/hamza" target="_blank" rel="noopener">GitHub</a>
           <a class="hover:text-white" href="https://linkedin.com/in/hamza" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="index.html" class="hover:text-white">Home</a>
+          <a href="../index.html" class="hover:text-white">Home</a>
         </div>
       </div>
     </footer>
