--- a/pages/resume.html
+++ b/pages/resume.html
@@ -10,30 +10,30 @@
   <body class="bg-gray-900 text-gray-100">
     <header data-sticky class="fixed inset-x-0 top-0 z-50 transition-colors">
       <nav class="container-pro flex h-16 items-center justify-between">
-        <a href="index.html" class="flex items-center gap-2 font-semibold">
+        <a href="../index.html" class="flex items-center gap-2 font-semibold">
           <span class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white">H</span>
           <span>Hamza</span>
         </a>
         <div class="hidden md:flex items-center gap-2 text-sm">
-          <a href="about.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">About</a>
-          <a href="index.html#projects" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Projects</a>
-          <a href="case-studies.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Case Studies</a>
-          <a href="blog.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Blog</a>
-          <a href="services.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Services</a>
-          <a href="contact.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Contact</a>
-          <a href="resume.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5 text-blue-400">Resume</a>
+          <a href="./about.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">About</a>
+          <a href="../index.html#projects" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Projects</a>
+          <a href="./case-studies.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Case Studies</a>
+          <a href="./blog.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Blog</a>
+          <a href="./services.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Services</a>
+          <a href="./contact.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5">Contact</a>
+          <a href="./resume.html" class="inline-flex items-center px-3 py-2 rounded-md hover:bg-white/5 text-blue-400">Resume</a>
         </div>
         <button data-mobile-nav-toggle class="md:hidden btn-ghost" aria-controls="mobile-menu" aria-expanded="false">Menu</button>
       </nav>
       <div data-mobile-nav id="mobile-menu" data-open="false" class="hidden md:hidden border-t border-white/10 bg-gray-900/80 backdrop-blur">
         <div class="container-pro py-4 flex flex-col gap-3">
-          <a href="about.html" class="py-2">About</a>
-          <a href="index.html#projects" class="py-2">Projects</a>
-          <a href="case-studies.html" class="py-2">Case Studies</a>
-          <a href="blog.html" class="py-2">Blog</a>
-          <a href="services.html" class="py-2">Services</a>
-          <a href="contact.html" class="py-2">Contact</a>
-          <a href="resume.html" class="py-2 text-blue-400">Resume</a>
+          <a href="./about.html" class="py-2">About</a>
+          <a href="../index.html#projects" class="py-2">Projects</a>
+          <a href="./case-studies.html" class="py-2">Case Studies</a>
+          <a href="./blog.html" class="py-2">Blog</a>
+          <a href="./services.html" class="py-2">Services</a>
+          <a href="./contact.html" class="py-2">Contact</a>
+          <a href="./resume.html" class="py-2 text-blue-400">Resume</a>
         </div>
       </div>
     </header>
