refactor: enhance navigation links and styles; implement parallax and spotlight effects

--- a/src/pages/resume.html
+++ b/src/pages/resume.html
@@ -115,7 +115,7 @@
         <div class="flex items-center gap-4">
           <a class="hover:text-white" href="https://github.com/hamza" target="_blank" rel="noopener">GitHub</a>
           <a class="hover:text-white" href="https://linkedin.com/in/hamza" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="index.html" class="hover:text-white">Home</a>
+          <a href="../index.html" class="hover:text-white">Home</a>
         </div>
       </div>
     </footer>
