--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
       <!-- Professional grid background -->
       <div class="absolute inset-0 pointer-events-none" aria-hidden="true" data-hero-bg>
         <!-- Main professional grid -->
-        <div class="absolute inset-0 bg-mesh-grid animate-grid-move opacity-25 h-screen w-screen"></div>
-        <div class="absolute inset-0 bg-grid animate-grid-move opacity-60 h-screen w-screen" ></div>
-        <div class="absolute inset-0 bg-grid-dots opacity-15 h-screen w-screen"></div>
+        <div class="absolute inset-0 bg-mesh-grid animate-grid-move opacity-25 "></div>
+        <div class="absolute inset-0 bg-grid animate-grid-move opacity-60 " ></div>
+        <div class="absolute inset-0 bg-grid-dots opacity-15 "></div>
         
         <!-- Enhanced gradient orbs with professional styling -->
         <div data-parallax="0.06" class="absolute top-0 left-0 h-screen w-screen -translate-x-1/2 rounded-full bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl animate-pulse-slow"></div>     
