refactor: update hero spotlight effect and remove sticky nav functionality

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="absolute inset-0 bg-grid-dots opacity-15 "></div>
         
         <!-- Enhanced gradient orbs with professional styling -->
-        <div data-parallax="0.06" class="absolute top-0 left-0 h-screen w-screen -translate-x-1/2 rounded-full bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl animate-pulse-slow"></div>     
+        <div data-parallax="0.06" class="absolute top-0 left-0 h-full w-screen -translate-x-1/2 bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl "></div>     
         <!-- Professional floating elements -->
         <div class="absolute top-20 left-20 w-2 h-2 bg-blue-400/40 rounded-full animate-pulse"></div>
         <div class="absolute top-40 right-32 w-1 h-1 bg-indigo-400/60 rounded-full animate-pulse" style="animation-delay: 1s;"></div>
