refactor: optimize hero animations and enhance page structure with improved navigation links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="twitter:title" content="Hamza — Full-Stack Developer" />
     <meta name="twitter:description" content="I build fast, reliable web apps that turn ideas into profit." />
     <meta name="twitter:image" content="/favicon.svg" />
+    <link rel="preconnect" href="https://images.unsplash.com" />
+    <link rel="dns-prefetch" href="https://images.unsplash.com" />
+    <link rel="modulepreload" href="/src/scripts/main.js" />
     
     <script type="application/ld+json">
     [
@@ -121,7 +124,7 @@
     </header>
 
     <!-- Hero -->
-    <section id="top" class="relative min-h-[90vh] flex items-center overflow-hidden bg-black text-white">
+    <section id="top" class="relative min-h-[90vh] flex items-center overflow-hidden bg-black text-white hero-anim-off">
       <!-- Professional grid background -->
       <div class="absolute inset-0 pointer-events-none" aria-hidden="true" data-hero-bg>
         <!-- Main professional grid -->
@@ -345,7 +348,7 @@
     </section>
 
     <!-- Services (moved up for conversion) -->
-    <section id="services" class="py-24 bg-black relative overflow-hidden">
+    <section id="services" class="py-24 bg-black relative overflow-hidden cv-auto">
       <!-- Background decoration -->
       <div class="absolute inset-0 bg-grid opacity-20"></div>
       <div class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"></div>
@@ -566,7 +569,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="py-20 bg-black relative overflow-hidden">
+    <section id="about" class="py-20 bg-black relative overflow-hidden cv-auto">
       <!-- Background decoration -->
       <div class="absolute inset-0 bg-grid opacity-20"></div>
       <div class="absolute top-0 left-0 w-96 h-96 bg-blue-500/5 rounded-full blur-3xl"></div>
@@ -667,7 +670,7 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="py-24 bg-black relative overflow-hidden">
+    <section id="projects" class="py-24 bg-black relative overflow-hidden cv-auto">
       <!-- Background decoration -->
       <div class="absolute inset-0 bg-grid opacity-20"></div>
       <div class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"></div>
@@ -748,7 +751,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonials" class="py-24 bg-gray-900 relative overflow-hidden">
+    <section id="testimonials" class="py-24 bg-gray-900 relative overflow-hidden cv-auto">
       <!-- Background decoration -->
       <div class="absolute inset-0 bg-grid opacity-30"></div>
       <div class="absolute top-0 left-1/2 -translate-x-1/2 w-96 h-96 bg-blue-500/5 rounded-full blur-3xl"></div>
@@ -788,7 +791,7 @@
 
     
     <!-- Contact -->
-    <section id="contact" class="relative py-24 bg-black overflow-hidden">
+    <section id="contact" class="relative py-24 bg-black overflow-hidden cv-auto">
       <!-- Background decoration -->
       <div class="absolute inset-0 bg-grid opacity-20"></div>
       <div class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"></div>
