--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -20,11 +20,182 @@
     <meta name="twitter:image" content="/favicon.svg" />
   </head>
   <body class="bg-gray-900 text-gray-100">
-    <!-- content copied from original file -->
+    <!-- Simple header (brand only) -->
+    <header class="sticky top-0 z-40 border-b border-white/10 bg-gray-900/70 backdrop-blur">
+      <div class="container-pro h-14 flex items-center justify-between">
+        <a href="/index.html" class="flex items-center gap-2 font-semibold">
+          <span class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white">H</span>
+          <span>Hamza</span>
+        </a>
+        <nav class="hidden sm:flex items-center gap-2">
+          <a href="/index.html" class="nav-link">Home</a>
+          <a href="/pages/contact.html" class="btn-minimal">Contact</a>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Breadcrumb / navigation path -->
+    <nav aria-label="Breadcrumb" class="border-b border-white/10 bg-black/60">
+      <ol class="container-pro flex items-center gap-2 py-3 text-sm text-gray-300">
+        <li><a href="/index.html" class="hover:text-white">Home</a></li>
+        <li aria-hidden="true" class="opacity-60 inline-flex items-center">
+          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        </li>
+        <li aria-current="page" class="text-white">About</li>
+      </ol>
+    </nav>
+
+    <!-- Hero / Intro -->
+    <section id="top" class="relative py-20 bg-black overflow-hidden">
+      <!-- Professional animated background -->
+      <div class="absolute inset-0 pointer-events-none" aria-hidden="true" data-hero-bg>
+        <div class="absolute inset-0 bg-mesh-grid animate-grid-move opacity-25"></div>
+        <div class="absolute inset-0 bg-grid animate-grid-move opacity-60"></div>
+        <div class="absolute inset-0 bg-grid-dots opacity-15"></div>
+        <div data-parallax="0.06" class="absolute top-0 left-0 h-full w-screen -translate-x-1/2 bg-gradient-to-r from-blue-600/20 via-indigo-600/15 to-cyan-500/20 blur-3xl"></div>
+      </div>
+      <div data-hero-spotlight class="absolute inset-0 z-10 pointer-events-none opacity-0 transition-opacity duration-300 mix-blend-soft-light" style="will-change: background;"></div>
+
+      <div class="container-pro relative z-20 grid gap-10 lg:grid-cols-2">
+        <div data-reveal class="opacity-0 translate-y-6">
+          <div class="glass-professional rounded-full px-5 py-2 inline-flex items-center gap-2 w-max mb-6">
+            <span class="h-2 w-2 rounded-full bg-emerald-400 animate-pulse glow-professional"></span>
+            <span class="text-xs tracking-wide uppercase text-white/90 font-medium">About Me</span>
+          </div>
+          <h1 class="text-4xl sm:text-5xl font-bold leading-tight mb-4">
+            Hamza — <span class="text-gradient">Full‑Stack Developer</span>
+          </h1>
+          <p class="text-gray-300 text-lg max-w-prose">
+            I build high‑performance web applications with clean architecture and production reliability. I care about outcomes, measurable impact, and software that scales.
+          </p>
+
+          <div class="mt-8 grid grid-cols-3 gap-4 text-center">
+            <div class="about-metric-card">
+              <p class="text-2xl font-semibold text-white">4+<span class="text-sm align-top text-gray-400">yrs</span></p>
+              <p class="text-xs text-gray-400">Experience</p>
+            </div>
+            <div class="about-metric-card">
+              <p class="text-2xl font-semibold text-white">20+</p>
+              <p class="text-xs text-gray-400">Projects shipped</p>
+            </div>
+            <div class="about-metric-card">
+              <p class="text-2xl font-semibold text-white">A</p>
+              <p class="text-xs text-gray-400">Core Web Vitals</p>
+            </div>
+          </div>
+
+          <div class="mt-8 flex flex-wrap gap-3">
+            <a href="/pages/contact.html" class="btn-primary">Start a project</a>
+            <a href="/pages/resume.html" class="btn-ghost">Download Resume</a>
+          </div>
+
+          <!-- Trust badges -->
+          <ul class="hero-badges pt-4">
+            <li class="hero-badge">
+              <span class="h-2.5 w-2.5 rounded-full bg-emerald-400 animate-pulse glow-professional"></span>
+              <span>Free 30‑min discovery call</span>
+            </li>
+            <li class="hero-badge">
+              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M3 11a9 9 0 1 0 18 0A9 9 0 0 0 3 11zm9-5v6l4 2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              <span>Replies within 24h</span>
+            </li>
+            <li class="hero-badge">
+              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 10c0 6-9 12-9 12S3 16 3 10a9 9 0 1 1 18 0z" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="10" r="3" stroke="currentColor" stroke-width="2"/></svg>
+              <span>Timezone‑friendly (PKT)</span>
+            </li>
+          </ul>
+        </div>
+
+        <div data-reveal class="opacity-0 translate-y-6 grid gap-4">
+          <div class="glass-professional rounded-2xl p-6 border border-white/10">
+            <h3 class="font-semibold text-white mb-2">My approach</h3>
+            <p class="text-gray-300 text-sm leading-relaxed">
+              Pragmatic problem‑solving, strong communication, and customer‑centric thinking. I partner with founders and teams to ship reliable products quickly without compromising quality.
+            </p>
+          </div>
+          <div class="grid grid-cols-2 gap-4">
+            <div class="about-skill-card group">
+              <div class="about-skill-icon bg-blue-500/10 text-blue-400 border-blue-500/20">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2L2 7l10 5 10-5-10-5z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M2 17l10 5 10-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M2 12l10 5 10-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              </div>
+              <p class="mt-3 text-sm text-gray-400">Front‑end</p>
+              <p class="mt-1 font-semibold text-white">React, Vite, Tailwind</p>
+            </div>
+            <div class="about-skill-card group">
+              <div class="about-skill-icon bg-emerald-500/10 text-emerald-400 border-emerald-500/20">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2L2 7l10 5 10-5-10-5z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M2 17l10 5 10-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M2 12l10 5 10-5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              </div>
+              <p class="mt-3 text-sm text-gray-400">Back‑end</p>
+              <p class="mt-1 font-semibold text-white">Node, Express, REST</p>
+            </div>
+            <div class="about-skill-card group">
+              <div class="about-skill-icon bg-indigo-500/10 text-indigo-400 border-indigo-500/20">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="3" width="20" height="14" rx="2" ry="2" stroke="currentColor" stroke-width="2"/><line x1="8" y1="21" x2="16" y2="21" stroke="currentColor" stroke-width="2"/><line x1="12" y1="17" x2="12" y2="21" stroke="currentColor" stroke-width="2"/></svg>
+              </div>
+              <p class="mt-3 text-sm text-gray-400">Databases</p>
+              <p class="mt-1 font-semibold text-white">Postgres, MongoDB</p>
+            </div>
+            <div class="about-skill-card group">
+              <div class="about-skill-icon bg-amber-500/10 text-amber-400 border-amber-500/20">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              </div>
+              <p class="mt-3 text-sm text-gray-400">Deployment</p>
+              <p class="mt-1 font-semibold text-white">AWS, Docker, CI/CD</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Values strip -->
+    <section class="py-16 bg-gradient-to-b from-black to-gray-900 text-white">
+      <div class="container-pro grid gap-6 sm:grid-cols-3">
+        <div data-reveal class="opacity-0 translate-y-6 glass rounded-xl p-6">
+          <p class="text-sm text-white/70">Quality</p>
+          <p class="mt-1 font-semibold">Production‑grade standards</p>
+        </div>
+        <div data-reveal class="opacity-0 translate-y-6 glass rounded-xl p-6">
+          <p class="text-sm text-white/70">Delivery</p>
+          <p class="mt-1 font-semibold">Fast without compromise</p>
+        </div>
+        <div data-reveal class="opacity-0 translate-y-6 glass rounded-xl p-6">
+          <p class="text-sm text-white/70">Communication</p>
+          <p class="mt-1 font-semibold">Clear and proactive</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="py-20 bg-black">
+      <div class="container-pro">
+        <div class="glass rounded-2xl p-8 max-w-2xl mx-auto text-center">
+          <h3 class="text-2xl font-bold mb-3">Ready to collaborate?</h3>
+          <p class="text-gray-300 mb-6">Let's discuss your goals and craft a plan to ship impactfully.</p>
+          <div class="flex flex-col sm:flex-row gap-4 justify-center">
+            <a href="/pages/contact.html" class="btn-primary">Get in touch</a>
+            <a href="/index.html#projects" class="btn-secondary">View my work</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="py-10 border-t border-white/10">
+      <div class="container-pro flex flex-col sm:flex-row items-center justify-between gap-4 text-sm text-gray-300">
+        <p>© <span id="year"></span> Hamza. All rights reserved.</p>
+        <div class="flex items-center gap-4">
+          <a class="hover:text-white" href="https://github.com/hamza" target="_blank" rel="noopener">GitHub</a>
+          <a class="hover:text-white" href="https://linkedin.com/in/hamza" target="_blank" rel="noopener">LinkedIn</a>
+          <a href="#top" class="hover:text-white">Top</a>
+        </div>
+      </div>
+    </footer>
+
     <script type="module" src="/src/scripts/main.js"></script>
     <script>
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
+
     <!-- Structured data -->
     <script type="application/ld+json">
     {
