Revamp hero section with full-screen VS Code SVG
The hero section background SVG was updated to a full-screen VS Code window illustration with extensive code lines, replacing the previous smaller SVG. This enhances the visual impact and better communicates the developer theme of the site. Minor formatting and asset references were also updated for consistency.

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -22,13 +22,13 @@
     <!-- Simple header (brand + quick links) -->
     <header class="sticky top-0 z-40 border-b border-white/10 bg-gray-900/70 backdrop-blur">
       <div class="container-pro h-14 flex items-center justify-between">
-        <a href="../index.html" class="flex items-center gap-2 font-semibold">
+        <a href="/index.html" class="flex items-center gap-2 font-semibold">
           <span class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white">H</span>
           <span>Hamza</span>
         </a>
         <nav class="hidden sm:flex items-center gap-2">
-          <a href="../index.html" class="nav-link">Home</a>
-          <a href="./contact.html" class="btn-minimal">Contact</a>
+          <a href="/index.html" class="nav-link">Home</a>
+          <a href="/pages/contact.html" class="btn-minimal">Contact</a>
         </nav>
       </div>
     </header>
@@ -36,7 +36,7 @@
     <!-- Breadcrumb / navigation path -->
     <nav aria-label="Breadcrumb" class="border-b border-white/10 bg-black/60">
       <ol class="container-pro flex items-center gap-2 py-3 text-sm text-gray-300">
-        <li><a href="../index.html" class="hover:text-white">Home</a></li>
+        <li><a href="/index.html" class="hover:text-white">Home</a></li>
         <li aria-hidden="true" class="opacity-60 inline-flex items-center">
           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         </li>
