refactor: update navigation links for consistency and enhance background effects with parallax properties

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           class="container-pro glass-professional rounded-full flex h-16 items-center justify-between"
         >
           <div class="flex items-center gap-6">
-            <a href="index.html" class="flex items-center gap-2 font-semibold">
+            <a href="index.html" class="flex items-center gap-2 font-semibold brand-logo">
               <span
                 class="inline-flex h-8 w-8 items-center justify-center rounded-md bg-gradient-to-br from-blue-600 to-indigo-600 text-white"
                 >H</span
@@ -3224,7 +3224,7 @@
               Start a Project
             </a>
             <a
-              href=/src"pages/about.html"
+              href="./src/pages/about.html"
               class="btn-ghost text-base px-8 py-4 hover:scale-105 transition-transform duration-300"
             >
               Learn More
@@ -3759,12 +3759,14 @@
       class="py-24 bg-black relative overflow-hidden cv-auto"
     >
       <!-- Background decoration -->
-      <div class="absolute inset-0 bg-grid opacity-20"></div>
+      <div class="absolute inset-0 bg-grid opacity-20" data-parallax="0.02"></div>
       <div
         class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"
+        data-parallax="0.05"
       ></div>
       <div
         class="absolute bottom-0 left-0 w-80 h-80 bg-blue-500/5 rounded-full blur-3xl"
+        data-parallax="0.08"
       ></div>
 
       <!-- Subtle floating code snippets -->
@@ -4211,12 +4213,14 @@
     <!-- About -->
     <section id="about" class="py-20 bg-black relative overflow-hidden cv-auto">
       <!-- Background decoration -->
-      <div class="absolute inset-0 bg-grid opacity-20"></div>
+      <div class="absolute inset-0 bg-grid opacity-20" data-parallax="0.02"></div>
       <div
         class="absolute top-0 left-0 w-96 h-96 bg-blue-500/5 rounded-full blur-3xl"
+        data-parallax="0.05"
       ></div>
       <div
         class="absolute bottom-0 right-0 w-80 h-80 bg-indigo-500/5 rounded-full blur-3xl"
+        data-parallax="0.08"
       ></div>
 
       <!-- Subtle floating coding blocks -->
@@ -4400,7 +4404,7 @@
           <!-- Actions -->
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#contact" class="btn-primary">Work with me</a>
-            <a href=/src"pages/resume.html" class="btn-ghost">Download Resume</a>
+            <a href="./src/pages/resume.html" class="btn-ghost">Download Resume</a>
           </div>
         </div>
         <!-- Capability cards -->
@@ -4554,12 +4558,14 @@
       class="py-24 bg-black relative overflow-hidden cv-auto"
     >
       <!-- Background decoration -->
-      <div class="absolute inset-0 bg-grid opacity-20"></div>
+      <div class="absolute inset-0 bg-grid opacity-20" data-parallax="0.02"></div>
       <div
         class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"
+        data-parallax="0.05"
       ></div>
       <div
         class="absolute bottom-0 left-0 w-80 h-80 bg-blue-500/5 rounded-full blur-3xl"
+        data-parallax="0.08"
       ></div>
 
       <div class="container-pro relative">
@@ -4662,9 +4668,10 @@
       class="py-24 bg-gray-900 relative overflow-hidden cv-auto"
     >
       <!-- Background decoration -->
-      <div class="absolute inset-0 bg-grid opacity-30"></div>
+      <div class="absolute inset-0 bg-grid opacity-30" data-parallax="0.02"></div>
       <div
         class="absolute top-0 left-1/2 -translate-x-1/2 w-96 h-96 bg-blue-500/5 rounded-full blur-3xl"
+        data-parallax="0.05"
       ></div>
 
       <div class="container-pro relative">
@@ -4710,12 +4717,14 @@
       class="relative py-24 bg-black overflow-hidden cv-auto"
     >
       <!-- Background decoration -->
-      <div class="absolute inset-0 bg-grid opacity-20"></div>
+      <div class="absolute inset-0 bg-grid opacity-20" data-parallax="0.02"></div>
       <div
         class="absolute top-0 right-0 w-96 h-96 bg-indigo-500/5 rounded-full blur-3xl"
+        data-parallax="0.05"
       ></div>
       <div
         class="absolute bottom-0 left-0 w-80 h-80 bg-blue-500/5 rounded-full blur-3xl"
+        data-parallax="0.08"
       ></div>
 
       <div class="container-pro relative">
