--- a/index.html
+++ b/index.html
@@ -101,23 +101,11 @@
       ></div>
       <div class="flex flex-col items-center z-10">
         <div class="mb-6">
-          <!-- Minimal logo as svg -->
-          <svg width="56" height="56" viewBox="0 0 56 56" fill="none">
-            <circle cx="28" cy="28" r="24" fill="url(#orb)" />
-            <defs>
-              <radialGradient
-                id="orb"
-                cx="0.5"
-                cy="0.5"
-                r="0.5"
-                fx="0.65"
-                fy="0.35"
-              >
-                <stop stop-color="#7dd3fc" />
-                <stop offset="1" stop-color="#312e81" />
-              </radialGradient>
-            </defs>
-          </svg>
+          <img
+            src="/src/assets/svg/hamza-logo-light.svg"
+            alt="Hamza Arya Logo"
+            class="h-12 w-12"
+          />
         </div>
         <div
           class="intro-terminal glassy-blur p-8 rounded-2xl shadow-2xl max-w-md w-full relative"
