--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
             aria-hidden="true"
             class="opacity-15"
             style="width: 100%; height: 100%"
+            decoding="async"
+            fetchpriority="low"
           />
         </div>
 
@@ -378,7 +380,7 @@
       </div>
       <div
         data-hero-spotlight
-        class="absolute inset-0 z-10 pointer-events-none opacity-0 transition-opacity duration-300 mix-blend-soft-light"
+        class="absolute inset-0 z-10 pointer-events-none opacity-0 transition-opacity duration-300"
         style="will-change: background"
       ></div>
       <div
